<resources>
    <string name="app_name">The address book behind the scenes</string>
    <string name="name">Имя:</string>
    <string name="surname">Фамилия:</string>
    <string name="address">Адрес:</string>
    <string name="telephone">Телефон:</string>
    <string name="save">Сохранить</string>
    <string name="go_home">Вернуться на главный экран</string>
    <string name="exit">Выход</string>
    <string name="title">Книга адресов за кадром</string>
    <string name="fill_in_all_the_fields">заполните все поля</string>
</resources>